<resources>
    <string name="app_name">Quizlet Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email_hint">email@example.com</string>
    <string name="register_password_hint">Enter your password</string>
    <string name="register_username_hint">Create a username</string>
    <string name="login_email_hint">Enter you email</string>
    <string name="login_password_hint">Enter you password</string>
    <string name="quickly_login_with">QUICKLY LOGIN WITH</string>
    <string name="or_login_with_email">OR LOGIN WITH USERNAME</string>
    <string name="google">Google</string>
    <string name="log_in">Log In</string>
    <string name="signup_btn">Sign up</string>
    <string name="logo_string">Over 90% of students who use Quizlet report higher grades</string>
    <string name="icon_string">Learn in four different ways-choose what works for you!</string>
    <string name="search_icon_string">Search more that 300 million sets already created by Quizlet users.</string>
    <string name="or_sign_up_with_username">OR SIGN UP WITH USERNAME</string>
    <string name="tvSetsTitle">Sets</string>
    <string name="tvFoldersTitle">Folders</string>
    <string name="view_all">View all</string>
    <string name="create_study_set">Create study set</string>
    <string name="create_folder">Create folder</string>
    <string name="create_class">Create class</string>
    <string name="create_set">Create set</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="folder_name">Folder name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="add_folder">add folder</string>
    <string name="folder">folder</string>
    <string name="folder_name_error_message">FOLDER NAME IS REQUIRED</string>
    <string name="sets_tab">SETS</string>
    <string name="classes_tab">CLASSES</string>
    <string name="users_TAB">USERS</string>
    <string name="set_name_hint">Subject, chapter, unit</string>
    <string name="set_list_title">Sets</string>
    <string name="add_set_menu_item_title">add set</string>
    <string name="enter_your_username">Enter your username</string>
</resources>