<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="@string/bottom_sheet_behavior">


        <TextView
            android:id="@+id/tvCreateSet"
            style="@style/ActionItem"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_study_set"
            app:drawableStartCompat="@drawable/ic_baseline_add_set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCreateFolder"
            style="@style/ActionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_folder"
            app:drawableStartCompat="@drawable/ic_baseline_folder_24"
            app:layout_constraintStart_toStartOf="@+id/tvCreateClass"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateClass" />

        <TextView
            android:id="@+id/tvCreateClass"
            style="@style/ActionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_class"
            app:drawableStartCompat="@drawable/ic_baseline_people_24"
            app:layout_constraintStart_toStartOf="@+id/tvCreateSet"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateSet" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>