<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/toolbar_menu"
                app:title="Home" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>





        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

        <TextView
            android:id="@+id/tvSetsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/tvSetsTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/coordinatorLayout2"
            app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout2" />

        <TextView
            android:id="@+id/tvFoldersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:text="@string/tvFoldersTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSetsTitle" />

        <TextView
            android:id="@+id/tvViewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:text="@string/view_all"
            android:textColor="@color/turquise"
            app:layout_constraintBottom_toBottomOf="@+id/tvSetsTitle"
            app:layout_constraintStart_toEndOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toTopOf="@+id/tvSetsTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvViewall"
            app:layout_constraintTop_toTopOf="@+id/tvViewall"
            app:layout_constraintVertical_bias="0.4" />


        <TextView
            android:id="@+id/tvViewall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:textColor="@color/turquise"
            android:text="@string/view_all"
            app:layout_constraintBottom_toBottomOf="@+id/tvFoldersTitle"
            app:layout_constraintStart_toEndOf="@+id/tvFoldersTitle"
            app:layout_constraintTop_toTopOf="@+id/tvFoldersTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRightArrow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewall2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvViewall2"
            app:layout_constraintTop_toTopOf="@+id/tvViewall2"
            app:layout_constraintVertical_bias="0.4" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSets"
            android:layout_width="161dp"
            android:layout_height="107dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSetsTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="304dp"
            android:layout_height="136dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvFoldersTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvFoldersTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>