<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/homeAppBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/toolbar_menu"
                app:title="Home" />

        </com.google.android.material.appbar.AppBarLayout>




        <TextView
            android:id="@+id/tvSetsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvSetsTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/homeAppBarLayout"
            app:layout_constraintTop_toBottomOf="@+id/homeAppBarLayout" />

        <TextView
            android:id="@+id/tvFoldersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvFoldersTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rvFolderList"
            app:layout_constraintStart_toStartOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toBottomOf="@+id/rvSets" />

        <TextView
            android:id="@+id/tvViewAllSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:text="@string/view_all"
            android:textColor="@color/turquise"
            app:layout_constraintBottom_toBottomOf="@+id/tvSetsTitle"
            app:layout_constraintStart_toEndOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toTopOf="@+id/tvSetsTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewAllSets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvViewAllSets"
            app:layout_constraintTop_toTopOf="@+id/tvViewAllSets"
            app:layout_constraintVertical_bias="0.4" />


        <TextView
            android:id="@+id/tvViewAllFolders"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="256dp"
            android:layout_marginEnd="32dp"
            android:text="@string/view_all"
            android:textColor="@color/turquise"
            app:layout_constraintBottom_toBottomOf="@+id/tvFoldersTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFoldersTitle"
            app:layout_constraintTop_toTopOf="@+id/tvFoldersTitle" />

        <ImageView
            android:id="@+id/ivRightArrow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvViewAllFolders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvViewAllFolders"
            app:layout_constraintTop_toTopOf="@+id/tvViewAllFolders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/rvFolderList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvSetsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSetsTitle"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFolderList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="212dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tvFoldersTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>